[package]
name = "luci"
version = "0.2.0"
edition = "2021"
description = "Define and read configuration file"
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/kevin-leptons/luci"

[dependencies]
serde = { version = "1.0.187", features = ["derive"] }
serde-hjson = "1.0.0"
libc = "0.2.149"
url = "2.5.2"

[dev-dependencies]
kix = "0.4.0"
